unpackaged/main/default/objects/Symposia__c/Symposia__c.object-meta.xml
<CustomObject>
    <description>Used for Pfizer in GES Connect</description>
    <label>Symposia</label>
    <nameField>
        <displayFormat>SYI-{0000}</displayFormat>
        <label>Symposia</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Symposia</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>