unpackaged/main/default/objects/Symposia__c/fields/Activity_Not_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Activity_Not_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activity Not Confirmed</label>
    <type>Checkbox</type>
</CustomField>