unpackaged/main/default/objects/Symposia__c/fields/CancelReason__c.field-meta.xml
<CustomField>
    <fullName>CancelReason__c</fullName>
    <label>Reason for Cancellation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Brand Sold</fullName>
            </value>
            <value>
                <fullName>Budget Cut</fullName>
            </value>
            <value>
                <fullName>Congress not a value</fullName>
            </value>
            <value>
                <fullName>Event no longer occurring</fullName>
            </value>
            <value>
                <fullName>Event not occurring in current year</fullName>
            </value>
            <value>
                <fullName>Exhibit Space Sold Out</fullName>
            </value>
            <value>
                <fullName>Failed trial data</fullName>
            </value>
            <value>
                <fullName>Influenza outbreak</fullName>
            </value>
            <value>
                <fullName>Managed by Partner</fullName>
            </value>
            <value>
                <fullName>Roll Over Activity</fullName>
            </value>
            <value>
                <fullName>Strategy Change</fullName>
            </value>
            <value>
                <fullName>Transfer to Local or Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>