unpackaged/main/default/objects/Symposia__c/fields/Chair_Person__c.field-meta.xml
<CustomField>
    <fullName>Chair_Person__c</fullName>
    <label>Chair Person</label>
    <length>30</length>
    <type>Text</type>
</CustomField>