unpackaged/main/default/objects/Symposia__c/fields/Congress__c.field-meta.xml
<CustomField>
    <fullName>Congress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Congress</label>
    <referenceTo>GES_Connect_Corporate_Accounts__c</referenceTo>
    <relationshipLabel>Symposia</relationshipLabel>
    <relationshipName>Symposia</relationshipName>
    <type>Lookup</type>
</CustomField>