unpackaged/main/default/objects/Symposia__c/fields/GES_Account_Executive__c.field-meta.xml
<CustomField>
    <fullName>GES_Account_Executive__c</fullName>
    <label>GES Account Executive</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alex Boyd</fullName>
            </value>
            <value>
                <fullName>Ashley Simmons</fullName>
            </value>
            <value>
                <fullName>Ilyse Link</fullName>
            </value>
            <value>
                <fullName>Megan Siconolfi</fullName>
            </value>
            <value>
                <fullName>Tammy Dettling</fullName>
            </value>
            <value>
                <fullName>Tara Nigro</fullName>
            </value>
            <value>
                <fullName>n/a</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>