unpackaged/main/default/objects/Symposia__c/fields/Included_w_Sponsorship__c.field-meta.xml
<CustomField>
    <fullName>Included_w_Sponsorship__c</fullName>
    <defaultValue>false</defaultValue>
    <description>created under SAL 492</description>
    <label>Included w/ Sponsorship</label>
    <type>Checkbox</type>
</CustomField>