unpackaged/main/default/objects/Symposia__c/fields/Meal_included_with_Symposium__c.field-meta.xml
<CustomField>
    <fullName>Meal_included_with_Symposium__c</fullName>
    <label>Meal included with Symposium</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Breakfast</fullName>
            </value>
            <value>
                <fullName>Lunch</fullName>
            </value>
            <value>
                <fullName>Dinner</fullName>
            </value>
            <value>
                <fullName>Reception</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>