unpackaged/main/default/objects/Symposia__c/fields/Requested_Symposium_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Requested_Symposium_Date_and_Time__c</fullName>
    <label>Requested Symposium Date&amp;Time</label>
    <type>DateTime</type>
</CustomField>