unpackaged/main/default/objects/Symposia__c/fields/Speaker_1__c.field-meta.xml
<CustomField>
    <fullName>Speaker_1__c</fullName>
    <label>Speaker 1</label>
    <length>30</length>
    <type>Text</type>
</CustomField>