unpackaged/main/default/objects/Symposia__c/fields/Speaker_2__c.field-meta.xml
<CustomField>
    <fullName>Speaker_2__c</fullName>
    <label>Speaker 2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>