unpackaged/main/default/objects/Symposia__c/fields/Speaker_3__c.field-meta.xml
<CustomField>
    <fullName>Speaker_3__c</fullName>
    <label>Speaker 3</label>
    <length>30</length>
    <type>Text</type>
</CustomField>