unpackaged/main/default/objects/Symposia__c/fields/Symposia_Name__c.field-meta.xml
<CustomField>
    <fullName>Symposia_Name__c</fullName>
    <label>Symposium Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>