unpackaged/main/default/objects/Symposia__c/fields/Symposia_Registrants__c.field-meta.xml
<CustomField>
    <fullName>Symposia_Registrants__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Symposia Registrants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>