unpackaged/main/default/objects/Symposia__c/fields/Symposia_Type__c.field-meta.xml
<CustomField>
    <fullName>Symposia_Type__c</fullName>
    <label>Symposia Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-Person</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>