unpackaged/main/default/objects/Symposia__c/fields/Symposium_Bundled_w_Sponsorship__c.field-meta.xml
<CustomField>
    <fullName>Symposium_Bundled_w_Sponsorship__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Symposium Bundled w/ Sponsorship</label>
    <type>Checkbox</type>
</CustomField>