unpackaged/main/default/objects/Symposia__c/fields/Symposium_Date__c.field-meta.xml
<CustomField>
    <fullName>Symposium_Date__c</fullName>
    <label>Symposium Date</label>
    <type>Date</type>
</CustomField>