unpackaged/main/default/objects/Symposia__c/fields/Symposium_End_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Symposium_End_Date_and_Time__c</fullName>
    <label>Symposium End Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>