unpackaged/main/default/objects/Symposia__c/fields/Symposium_Lead__c.field-meta.xml
<CustomField>
    <fullName>Symposium_Lead__c</fullName>
    <label>Symposium Lead</label>
    <length>30</length>
    <type>Text</type>
</CustomField>