unpackaged/main/default/objects/Symposia__c/fields/Symposium_Location__c.field-meta.xml
<CustomField>
    <fullName>Symposium_Location__c</fullName>
    <label>Symposium Location</label>
    <length>30</length>
    <type>Text</type>
</CustomField>