unpackaged/main/default/objects/Symposia__c/fields/Symposium_Notes__c.field-meta.xml
<CustomField>
    <fullName>Symposium_Notes__c</fullName>
    <label>Symposium Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>