unpackaged/main/default/objects/Symposia__c/fields/Symposium_Time__c.field-meta.xml
<CustomField>
    <fullName>Symposium_Time__c</fullName>
    <label>Symposium Start Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>